--- a/demo/src/app/components/cart/cart.component.scss
+++ b/demo/src/app/components/cart/cart.component.scss
@@ -24,17 +24,21 @@
     .product__detail {
       display: flex;
       flex-direction: column;
+      width: 17rem;
       padding: 1rem 0;
       .product__name {
-        text-align: center;
         margin-bottom: auto;
       }
       .product__btn {
         display: flex;
+        width: 17rem;
         gap: 2rem;
         align-items: center;
+        .product__qty {
+          flex: 1;
+          text-align: center;
+        }
         .action_btn {
-          background-color: $themeColor;
           padding: 0 0.8rem;
           border-radius: 16px;
           font-size: 1.5rem;
@@ -93,5 +97,33 @@
   p.promotion__text {
     padding: 0;
     margin: auto 0;
+  }
+}
+
+.action__btn-disabled {
+  background-color: #747474;
+  pointer-events: none;
+}
+.action__btn-active {
+  background-color: $themeColor;
+}
+
+@media only screen and (max-width: 425px) {
+  .modal-body {
+    padding: 0;
+    .cart__product {
+      gap: 0.5rem;
+      .product__detail {
+        width: auto;
+        .product__btn {
+          width: auto;
+          gap: 0.5rem;
+        }
+      }
+      .product__final_price {
+        padding: 0;
+        font-size: 1rem;
+      }
+    }
   }
 }
